[package]
name = "manix"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.22"
futures-util = "0.3"
hex = "0.4"
# nom_bencode = { git = "https://github.com/ckampfe/nom_bencode", branch = "display" }
nom_bencode = { path = "/Users/clark/code/nom_bencode" }
percent-encoding = "2.1"
reqwest = "0.11"
sha-1 = "0.9"
tokio = { version = "1", features = ["full"] }
